[package]
name = "amx"
version = "0.0.4"
edition = "2021"
authors = ["syui <syui@syui.cf>"]

[dependencies]
anyhow = "*"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread", "rt"] }
tokio-stream = { version = "0.1.1", default-features = false }
tracing-subscriber = "0.3.15"
matrix-sdk = "*"
futures = "*"
seahorse = "*"
dotenv = "0.15"
serde_derive = "1.0"
serde_json = "1.0"
serde = "*"
config = { git = "https://github.com/mehcode/config-rs", branch = "master" }
shellexpand = "*"
os_type = "2.4"
ruma = "*"
curl = "*"
dirs = "*"
toml = "*"
